--- a/package.json
+++ b/package.json
@@ -1,41 +1,16 @@
 {
-  "_from": "something-random-on-discord",
-  "_id": "something-random-on-discord@0.0.2",
-  "_inBundle": false,
-  "_integrity": "sha512-VMbMq09Gq5vAeMleujOoHKTGQU4xCaKVkx961AfaEkYo+VTD5ui23u2fcmZ9q1D72N6eSRNjBXNQjr/+8AiYdg==",
-  "_location": "/something-random-on-discord",
-  "_phantomChildren": {},
-  "_requested": {
-    "type": "tag",
-    "registry": true,
-    "raw": "something-random-on-discord",
-    "name": "something-random-on-discord",
-    "escapedName": "something-random-on-discord",
-    "rawSpec": "",
-    "saveSpec": null,
-    "fetchSpec": "latest"
-  },
-  "_requiredBy": [
-    "#USER",
-    "/"
-  ],
-  "_resolved": "https://registry.npmjs.org/something-random-on-discord/-/something-random-on-discord-0.0.2.tgz",
-  "_shasum": "42e476f5596f3920f06bd9c73e29e441ffe9d2d5",
-  "_spec": "something-random-on-discord",
-  "_where": "C:\\Users\\kmadh\\Documents\\GitHub\\Fab",
-  "author": {
-    "name": "ctk"
-  },
-  "bugs": {
-    "url": "https://github.com/CTK-WARRIOR/something-random-on-discord/issues"
-  },
-  "bundleDependencies": false,
-  "dependencies": {
-    "node-fetch": "^2.6.0"
-  },
-  "deprecated": false,
+  "name": "something-random-on-discord",
+  "version": "0.0.1",
   "description": "A very easy to use package which gives you random things.",
-  "homepage": "https://github.com/CTK-WARRIOR/something-random-on-discord#readme",
+  "main": "index.js",
+  "scripts": {
+    "test": "node index.js",
+    "start": "node index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/CTK-WARRIOR/something-random-on-discord"
+  },
   "keywords": [
     "ctk",
     "random",
@@ -45,18 +20,16 @@
     "String",
     "meme",
     "neko",
-    "kpop"
+    "kpop",
+    "fact"
   ],
+  "author": "ctk",
   "license": "MIT",
-  "main": "index.js",
-  "name": "something-random-on-discord",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/CTK-WARRIOR/something-random-on-discord.git"
+  "bugs": {
+    "url": "https://github.com/CTK-WARRIOR/something-random-on-discord/issues"
   },
-  "scripts": {
-    "start": "node index.js",
-    "test": "node index.js"
-  },
-  "version": "0.0.2"
+  "homepage": "https://github.com/CTK-WARRIOR/dsomething-random-on-discord#readme",
+  "dependencies": {
+    "node-fetch": "^2.6.0"
+  }
 }
